--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -98,14 +98,5 @@
             text-align: center;
         }
     }
-    &__cta{
-        font-size: $font-sm;
-        color: $white;
-        transition: opacity .3s ease-in-out;
-
-        &:hover{
-            opacity: 0.75;
-        }
-    }
 }
 
