--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -6,7 +6,8 @@
         background-position: center center;
         min-height: 17.5rem;
         position: relative;
-
+        z-index: -5;
+        
         &::before{
             content:"";
             background-image: url('/images/image-mockups.png');
